--- a/google/rewriteG.conf
+++ b/google/rewriteG.conf
@@ -1,5 +1,6 @@
 // google 相关重写
 // 作者：TG @elecV2
+// 订阅链接： https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/google/rewriteG.conf
  
 hostname = www.google.com
 
