--- a/google/rewriteG.conf
+++ b/google/rewriteG.conf
@@ -13,4 +13,5 @@ https:\/\/www\.google\.com\/(m|search) url script-response-body https://raw.gith
 // 只保留搜索关键字。(不能翻页、转到图片/视频等其他搜索)
 // https:\/\/www\.google\.com\/(m|search).+(q=[^&]+)&.+ url 307 $1?$2
 
+// google.cn 重定向
 ^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
