简书手机页面优化

--- a/jianshu.conf
+++ b/jianshu.conf
@@ -1,6 +1,7 @@
+// 规则仅对手机网页版有效，如使用APP 请勿添加
 // 更新频道：https://t.me/elecV2
 
-host = www.jianshu.com
+hostname = www.jianshu.com
 
 // 先重写到桌面版
 ^https:\/\/www\.jianshu\.com\/p url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.108 Safari/537.36$2
