dianx.cookie.conf bug fix

--- a/dianx/dianx.cookie.conf
+++ b/dianx/dianx.cookie.conf
@@ -1,7 +1,7 @@
 // 中国电信金豆兑换话费 cookie 获取，rewrite(重写) 订阅文件
 // 作者：https://t.me/elecV2
 
-hostname = wapside.189.cn:9001
+hostname = wapside.189.cn, wapside.189.cn:9001
 
 ^https:\/\/wapside.189.cn:9001\/api\/exchange\/consume url script-request-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/dianx/dianx.js
 
