--- a/archive/JD/crazyjoy.conf
+++ b/archive/JD/crazyjoy.conf
@@ -2,8 +2,8 @@
 // 任务JS 作者: 小赤佬
 // 修改发布 BY: https://t.me/elecV2
 
-// 活动地址: openjd://virtual?params=%7B%20%22category%22:%20%22jump%22,%20%22des%22:%20%22m%22,%20%22url%22:%20%22https://crazy-joy.jd.com/?userInviteCode=4xNkxulet0-rfc3eWGgXhA==%22%20%7D
-// 复制链接到手机浏览器打开，然后会跳转到 APP 中的活动页面。 (链接包含邀请码，介意则手动删除)。
+// 活动地址: openjd://virtual?params=%7B%20%22category%22:%20%22jump%22,%20%22des%22:%20%22m%22,%20%22url%22:%20%22https://crazy-joy.jd.com/%23/?userInviteCode=4xNkxulet0-rfc3eWGgXhA==%22%20%7D
+// 复制链接保存到 Notes 中，可直接点击跳转到京东 APP 中的活动页面，或者用默认浏览器打开。 (链接包含邀请码，介意则删除。也可以首次进入后查找自己的邀请码进行替换。 userInviteCode=邀请码%22%20%7D)。
 
 // 需手动打开活动地址，自动合并任务才会执行
 // 任务执行时下方 JOY 并不会实时移动，以金币变化为准，或手动刷新查看。
