crazy joy notify

--- a/archive/JD/crazyjoy.conf
+++ b/archive/JD/crazyjoy.conf
@@ -7,6 +7,11 @@
 
 // 需手动打开活动地址，自动合并任务才会执行
 // 任务执行时下方 JOY 并不会实时移动，以金币变化为准，或手动刷新查看。
+// 定时通知，点击通知跳转到 APP 活动页。（cron 时间自行调整）
+// 6 0,12 * * * https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/archive/JD/crazyjoy.js
+
+// 定时通知跳转链接无邀请码的版本：
+// 6 0,12 * * * https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/archive/JD/crazyjoy.noinvite.js
 
 hostname = crazy-joy.jd.com
 
