CSDN 手机网页显示优化 其他说明调整

--- a/betterweb/baiduPan.conf
+++ b/betterweb/baiduPan.conf
@@ -1,6 +1,7 @@
 // 百度网盘手机网页优化。 （APP 用户请勿添加）
 // 可直接下载视频/音频/zip 等文件
 // 更新频道：https://t.me/elecV2
+// QuantumultX rewrite 订阅地址: https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/betterweb/baiduPan.conf
 
 hostname = pan.baidu.com
 
