--- a/justopenit/justopenit.conf
+++ b/justopenit/justopenit.conf
@@ -1,8 +1,11 @@
-hostname = link.jianshu.com, link.zhihu.com, redirect.ruguoapp.com
+hostname = link.csdn.net, link.jianshu.com, link.zhihu.com, redirect.ruguoapp.com
 
 // [rewrite_local]
 // 移除简书跳转第三方网站的中间提醒
 ^https://link\.jianshu\.com/\?t=(.*) url 307 $1
+
+// 移除CSDN跳转第三方网站的中间提醒
+^https?://link\.csdn\.net/api/v1/link/check\?url=(.*) url 302 $1
 
 // 移除即刻跳转第三方网站的中间提醒(好像无效)
 // ^https://redirect\.ruguoapp\.com/\?redirect=(https?)%3A%2F%2F(.*) url 307 $1://$2
