remove: google endless

--- a/google/rewriteG.conf
+++ b/google/rewriteG.conf
@@ -7,8 +7,8 @@ hostname = www.google.com
 // 去除 url 中的其他参数
 https:\/\/www\.google\.com\/(m|search).+(q=[^&]+) url script-request-header https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/google/simplifyurl.js
 
-// 自动翻页
-https:\/\/www\.google\.com\/(m|search) url script-response-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/google/Endless_Google.user.js
+// 自动翻页（Google 新版已自动加载，故注释掉。如有需要，自行开启
+// https:\/\/www\.google\.com\/(m|search) url script-response-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/google/Endless_Google.user.js
 
 // 只保留搜索关键字。(不能翻页、转到图片/视频等其他搜索)
 // https:\/\/www\.google\.com\/(m|search).+(q=[^&]+)&.+ url 307 $1?$2
