--- a/betterweb/zhihu.conf
+++ b/betterweb/zhihu.conf
@@ -1,11 +1,11 @@
 // 知乎手机网页优化。(如使用 APP 请勿添加本规则)
-// author: https://t.me/elecV2
-// QuanX 订阅地址：https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/betterweb/zhihu.conf
+// 更新频道: https://t.me/elecV2
+// QuanX 重写订阅地址：https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/betterweb/zhihu.conf
 
 hostname = oia.zhihu.com, link.zhihu.com, www.zhihu.com
 
 // 先重写到桌面版
-^https:\/\/www\.zhihu\.com\/(question|topic) url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.83 Safari/537.36$2
+^https:\/\/www\.zhihu\.com\/(question|topic) url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/98.0.4758.82 Safari/537.36$2
 
 // 再注入 CSS 进行优化
 ^https:\/\/www\.zhihu\.com\/question url script-response-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/betterweb/zhihux.user.js
