Fix #19: add hostname google.cn

--- a/google/rewriteG.conf
+++ b/google/rewriteG.conf
@@ -2,7 +2,7 @@
 // 作者：TG @elecV2
 // 订阅链接： https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/google/rewriteG.conf
  
-hostname = www.google.com
+hostname = www.google.com, www.google.cn, www.g.cn
 
 // 去除 url 中的其他参数
 https:\/\/www\.google\.com\/(m|search).+(q=[^&]+) url script-request-header https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/google/simplifyurl.js
