perf: 增加对 stackexchange 系列网站的支持

--- a/betterweb/stackoverflow.conf
+++ b/betterweb/stackoverflow.conf
@@ -2,10 +2,12 @@
 // 更新频道: https://t.me/elecV2
 // QuanX 重写订阅地址：https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/betterweb/stackoverflow.conf
 
-hostname = stackoverflow.com
+hostname = stackoverflow.com, *.stackexchange.com, superuser.com
 
 // 本地测试
-// ^https:\/\/stackoverflow\.com\/question url script-response-body stackoverflow.js
+// ^https://stackoverflow|superuser\.com/question url script-response-body stackoverflow.js
 
 // 注入 CSS 进行优化
-^https:\/\/stackoverflow\.com\/question url script-response-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/betterweb/stackoverflow.js
+^https://stackoverflow|superuser\.com/question url script-response-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/betterweb/stackoverflow.js
+
+^https://.+\.stackexchange\.com/question url script-response-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/betterweb/stackoverflow.js
