feat: 去除 Google 搜索结果的跳转

--- a/google/rewriteG.conf
+++ b/google/rewriteG.conf
@@ -1,11 +1,11 @@
-// google 相关重写
+// google 相关重写（部分已失效
 // 作者：TG @elecV2
 // 订阅链接： https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/google/rewriteG.conf
  
 hostname = www.google.com, www.google.cn, www.g.cn
 
-// 去除 url 中的其他参数
-https:\/\/www\.google\.com\/(m|search).+(q=[^&]+) url script-request-header https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/google/simplifyurl.js
+// 去除 url 中的其他参数（重写后有可能会继续匹配，导致无限循环，暂时移除
+// https:\/\/www\.google\.com\/(m|search).+(q=[^&]+) url script-request-header https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/google/simplifyurl.js
 
 // 自动翻页（Google 新版已自动加载，故注释掉。如有需要，自行开启
 // https:\/\/www\.google\.com\/(m|search) url script-response-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/google/Endless_Google.user.js
@@ -15,3 +15,6 @@ https:\/\/www\.google\.com\/(m|search).+(q=[^&]+) url script-request-header http
 
 // google.cn 重定向
 ^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
+
+// gogole 去除搜索结果重定向 no redirect
+^https://www\.google\.com/url.+url=(https?)%3A%2F%2F([^%]+)%2F([^&]+) url 307 $1://$2/$3
