--- a/justopenit/justopenit.conf
+++ b/justopenit/justopenit.conf
@@ -1,4 +1,4 @@
-hostname = link.csdn.net, link.jianshu.com, link.zhihu.com, redirect.ruguoapp.com
+hostname = link.csdn.net, link.jianshu.com, link.zhihu.com, redirect.ruguoapp.com, www.google.com
 
 // [rewrite_local]
 // 移除简书跳转第三方网站的中间提醒
@@ -12,3 +12,6 @@ hostname = link.csdn.net, link.jianshu.com, link.zhihu.com, redirect.ruguoapp.co
 
 // 移除知乎跳转第三方网站的中间提醒
 ^https?://link\.zhihu\.com/\?target=(https?)%3A//(.*) url 307 $1://$2
+
+// 移除 Google 搜索结果中的重定向
+^https://www\.google\.com/url.+url=(https?)%3A%2F%2F([^%]+)%2F([^&]+) url 307 $1://$2/$3
