fix: 去除重定向后部分网址出错的问题

--- a/google/rewriteG.conf
+++ b/google/rewriteG.conf
@@ -14,7 +14,8 @@ hostname = www.google.com, www.google.cn, www.g.cn
 // https:\/\/www\.google\.com\/(m|search).+(q=[^&]+)&.+ url 307 $1?$2
 
 // google.cn 重定向
-^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
+^https?:\/\/(www.)?(g|google)\.cn url 307 https://www.google.com
 
-// gogole 去除搜索结果重定向 no redirect
-^https://www\.google\.com/url.+url=(https?)%3A%2F%2F([^%]+)%2F([^&]+) url 307 $1://$2/$3
+// google 去除搜索结果重定向 no redirect
+// ^https://www\.google\.com/url.+url=(https?)%3A%2F%2F([^%]+)%2F([^&]+)
+^https://www\.google\.com/url\? url script-echo-response https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/google/google_noredirect.js
