perf: stackoverflow css update

--- a/google/rewriteG.conf
+++ b/google/rewriteG.conf
@@ -4,18 +4,19 @@
  
 hostname = www.google.com, www.google.cn, www.g.cn
 
-// 去除 url 中的其他参数（重写后有可能会继续匹配，导致无限循环，暂时移除
-// https:\/\/www\.google\.com\/(m|search).+(q=[^&]+) url script-request-header https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/google/simplifyurl.js
-
-// 自动翻页（Google 新版已自动加载，故注释掉。如有需要，自行开启
-// https:\/\/www\.google\.com\/(m|search) url script-response-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/google/Endless_Google.user.js
-
-// 只保留搜索关键字。(不能翻页、转到图片/视频等其他搜索)
-// https:\/\/www\.google\.com\/(m|search).+(q=[^&]+)&.+ url 307 $1?$2
-
 // google.cn 重定向
 ^https?:\/\/(www.)?(g|google)\.cn url 307 https://www.google.com
+
+// 屏蔽一些 ping 请求
+// https://www\.google\.com/client_204 url reject-200
+// https://www\.google\.com/ads url reject-dict
+
+// 去除 url 中的其他参数（在自动加载下一页是有问题，手机用户请勿添加
+// https://www\.google\.com/(m|search)\? url script-request-header https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/google/simplifyurl.js
 
 // google 去除搜索结果重定向 no redirect
 // ^https://www\.google\.com/url.+url=(https?)%3A%2F%2F([^%]+)%2F([^&]+)
 ^https://www\.google\.com/url\? url script-echo-response https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/google/google_noredirect.js
+
+// 自动翻页（Google 新版已自动加载，故注释掉。如有需要，自行开启
+// https:\/\/www\.google\.com\/(m|search) url script-response-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/google/Endless_Google.user.js
